--- a/src/app/pages/calendario/index/date-modal/date-modal.component.html
+++ b/src/app/pages/calendario/index/date-modal/date-modal.component.html
@@ -2,25 +2,64 @@
   <h5 class="modal-title" id="exampleModalLabel"><i class="fas fa-circle" style="color: #13D52A"></i> {{ selectedDate | date: 'dd/MM/yyyy' }}</h5>
 </div>
 <div class="modal-body">
-  <div *ngIf="relatedEvents.length > 0; else noEvents">
-    <h6>Citas del día:</h6>
-    <div *ngFor="let event of relatedEvents">
-      <div class="mt-2">
-        <a class="btn bg-green btn-block" data-toggle="collapse" [attr.href]="'#collapseExample-' + event.calendario.Cita" role="button" aria-expanded="false" [attr.aria-controls]="'collapseExample-' + event.calendario.paciente?.pacientable_id">
-          <i class="fas fa-user"></i> {{ event.calendario.paciente?.pacientable?.Nombres }} {{ event.calendario.paciente?.pacientable?.Paterno }}
-        </a>
-        <div class="collapse mt-2" [attr.id]="'collapseExample-' + event.calendario.Cita">
-          <ul class="list-group">
-            <li class="list-group-item"><p class="font-weight-bold mb-1">Hora:</p> {{ event.calendario.Fecha | date: 'h:m a' }}</li>
-            <li class="list-group-item"><p class="font-weight-bold mb-1">Paciente:</p> <a>{{ event.calendario.paciente.pacientable?.Nombres }} {{ event.calendario.paciente.pacientable?.Paterno }} {{ event.calendario.paciente.pacientable?.Materno }}</a></li>
-            <li class="list-group-item"><p class="font-weight-bold mb-1">Profesional:</p> {{ event.calendario.profesional?.Nombres }} {{ event.calendario.profesional?.Paterno }} {{ event.calendario.profesional?.Materno }}</li>
-            <li class="list-group-item"><p class="font-weight-bold mb-1">Motivo:</p> {{ event.calendario.Motivo }} <br></li>
-          </ul>
+  <div *ngIf="showEventInfo">
+    <div *ngIf="relatedEvents.length > 0; else noEvents">
+      <h6>Citas del día:</h6>
+      <div *ngFor="let event of relatedEvents">
+        <div class="mt-2">
+          <a class="btn btn-flat border-0 border-bottom btn-block text-left" data-toggle="collapse" [attr.href]="'#collapseExample-' + event.calendario.Cita" role="button" aria-expanded="false" [attr.aria-controls]="'collapseExample-' + event.calendario.paciente?.pacientable_id">
+            <i [style.color]="getEventColor(event)" class="fas fa-calendar"></i> {{event.Tipo}} - {{ event.calendario.paciente?.pacientable?.Nombres }} {{ event.calendario.paciente?.pacientable?.Paterno }}
+          </a>
+          <div class="collapse mt-2" [attr.id]="'collapseExample-' + event.calendario.Cita">
+            <ul class="list-group">
+              <li class="list-group-item"><p class="font-weight-bold mb-1">Hora:</p> {{ event.calendario.Fecha | date: 'h:m a' }}</li>
+              <li class="list-group-item"><p class="font-weight-bold mb-1">Paciente:</p> <a>{{ event.calendario.paciente.pacientable?.Nombres }} {{ event.calendario.paciente.pacientable?.Paterno }} {{ event.calendario.paciente.pacientable?.Materno }}</a></li>
+              <li class="list-group-item"><p class="font-weight-bold mb-1">Profesional:</p> {{ event.calendario.profesional?.Nombres }} {{ event.calendario.profesional?.Paterno }} {{ event.calendario.profesional?.Materno }}</li>
+              <li class="list-group-item"><p class="font-weight-bold mb-1">Motivo:</p> {{ event.calendario.Motivo }} <br></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
+    <ng-template #noEvents>
+      <p>No hay citas relacionados para esta fecha.</p>
+    </ng-template>
+    <button class="btn btn-success btn-block mt-3" (click)="openAppointmentForm()">Agendar cita</button>
   </div>
-  <ng-template #noEvents>
-    <p>No hay citas relacionados para esta fecha.</p>
-  </ng-template>
+  <!-- Formulario para agendar cita -->
+  <div *ngIf="showAppointmentForm">
+    <form (submit)="createCita()">
+      <!-- Campos del formulario -->
+      <div>
+        <div class="form-group">
+          <label class="col-form-label">
+            Tipo
+          </label>
+            <select class="form-control" name="tipo" id="tipo" [(ngModel)]="tipo">
+              <option value="">-- Seleccione una opción --</option>
+              <option value="Consulta">Consulta médica</option>
+              <option value="Psicólogo">Psicólogo</option>
+              <option value="Nutriólogo">Nutriólogo</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label class="col-form-label">
+                Motivo
+            </label>
+            <textarea class="form-control" name="motivo" id="motivo" cols="30" rows="8" [(ngModel)]="motivo"></textarea>
+        </div>
+        <div class="form-group">
+          <label class="col-form-label">
+              Hora
+          </label>
+          <input type="time" class="form-control" name="hora" id="hora" [(ngModel)]="hora">
+      </div>
+      </div>
+      <!-- Botones para guardar o cancelar la cita -->
+      <div class="float-right mb-3">
+        <button type="submit" class="btn btn-success">Guardar cita</button>
+        <button type="button" class="btn btn-danger ml-3" (click)="closeAppointmentForm()">Cancelar</button>
+      </div>
+    </form>
+  </div>
 </div>
