--- a/src/app/pages/calendario/index/index.component.html
+++ b/src/app/pages/calendario/index/index.component.html
@@ -23,3 +23,11 @@
     </div>
   </div>
 </div>
+
+<div class="modal" id="eventModal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div #eventosColapsados class="modal-content">
+      <app-event-modal [event]="selectedEvent"></app-event-modal>
+    </div>
+  </div>
+</div>
