--- a/src/app/pages/calendario/index/date-modal/date-modal.component.html
+++ b/src/app/pages/calendario/index/date-modal/date-modal.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header border-0">
-  <h5 class="modal-title" id="exampleModalLabel"><i class="fas fa-circle" style="color: #13D52A"></i> {{ selectedDate | date: 'dd/MM/yyyy' }}</h5>
+  <h5 class="modal-title" id="dateModalLabel"><i class="fas fa-circle" style="color: #13D52A"></i> {{ selectedDate | date: 'dd/MM/yyyy' }}</h5>
 </div>
 <div class="modal-body">
   <div *ngIf="showEventInfo">
@@ -8,15 +8,25 @@
       <div *ngFor="let event of relatedEvents">
         <div class="mt-2">
           <a class="btn btn-flat border-0 border-bottom btn-block text-left" data-toggle="collapse" [attr.href]="'#collapseExample-' + event.calendario.Cita" role="button" aria-expanded="false" [attr.aria-controls]="'collapseExample-' + event.calendario.paciente?.pacientable_id">
-            <i [style.color]="getEventColor(event)" class="fas fa-calendar"></i> {{event.Tipo}} - {{ event.calendario.paciente?.pacientable?.Nombres }} {{ event.calendario.paciente?.pacientable?.Paterno }}
+            <h5 class="text-secondary"><i [style.color]="getEventColor(event)" class="fas fa-calendar"></i> {{event.Tipo}} - {{ event.calendario.paciente?.pacientable?.Nombres }} {{ event.calendario.paciente?.pacientable?.Paterno }}</h5>
           </a>
           <div class="collapse mt-2" [attr.id]="'collapseExample-' + event.calendario.Cita">
-            <ul class="list-group">
-              <li class="list-group-item"><p class="font-weight-bold mb-1">Hora:</p> {{ event.calendario.Fecha | date: 'h:m a' }}</li>
-              <li class="list-group-item"><p class="font-weight-bold mb-1">Paciente:</p> <a>{{ event.calendario.paciente.pacientable?.Nombres }} {{ event.calendario.paciente.pacientable?.Paterno }} {{ event.calendario.paciente.pacientable?.Materno }}</a></li>
-              <li class="list-group-item"><p class="font-weight-bold mb-1">Profesional:</p> {{ event.calendario.profesional?.Nombres }} {{ event.calendario.profesional?.Paterno }} {{ event.calendario.profesional?.Materno }}</li>
-              <li class="list-group-item"><p class="font-weight-bold mb-1">Motivo:</p> {{ event.calendario.Motivo }} <br></li>
-            </ul>
+            <div>
+              <ul class="list-group">
+                <li class="list-group-item border-0 bg-light">
+                  <a class="btn btn-tool btn-sm float-right pt-3" (click)="destroyCita(event)">
+                    <i class="fas fa-ban text-danger"></i>
+                  </a>
+                  <a class="btn btn-tool btn-sm float-right pt-3">
+                    <i class="fas fa-edit text-primary"></i>
+                  </a>
+                </li>
+                <li class="list-group-item border-0 bg-light"><p class="font-weight-bold mb-1">Hora:</p> {{ event.calendario.Fecha | date: 'h:m a' }}</li>
+                <li class="list-group-item border-0 bg-light"><p class="font-weight-bold mb-1">Paciente:</p> <a>{{ event.calendario.paciente.pacientable?.Nombres }} {{ event.calendario.paciente.pacientable?.Paterno }} {{ event.calendario.paciente.pacientable?.Materno }}</a></li>
+                <li class="list-group-item border-0 bg-light"><p class="font-weight-bold mb-1">Profesional:</p> {{ event.calendario.profesional?.Nombres }} {{ event.calendario.profesional?.Paterno }} {{ event.calendario.profesional?.Materno }}</li>
+                <li class="list-group-item border-0 bg-light"><p class="font-weight-bold mb-1">Motivo:</p> {{ event.calendario.Motivo }} <br></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
