Primer formulario de antecedentes personales patologicos

--- a/src/app/pages/calendario/index/index.component.html
+++ b/src/app/pages/calendario/index/index.component.html
@@ -10,7 +10,7 @@
             </div>
           </div>
           <div class="card-body">
-            <full-calendar [options]="calendarOptions"></full-calendar>
+            <full-calendar [options]="calendarOptions" class="my-custom-calendar"></full-calendar>
           </div>
       </div>
   </div>
