--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,33 @@
-<p>login works!</p>
+<div class="background">
+    <div class="container">
+        <div class="row abs-center d-flex justify-content-center">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="m-4">
+                            <form (ngSubmit)="login()">
+                                <legend class="text-center">Iniciar sesión</legend>
+                                <hr>
+                                <div class="form-group">
+                                    <label for="username-email">Correo electrónico</label>
+                                    <input type="email" class="form-control" id="email" name="email" [(ngModel)]="credentials.email" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="password">Contraseña</label>
+                                    <div class="input-group mb-3">
+                                        <input type="{{ showPassword ? 'text' : 'password' }}" class="form-control" id="password" name="password" [(ngModel)]="credentials.password" required>
+                                        <button class="btn btn-secondary" type="button" id="showPassword" (click)="showPassword = !showPassword"><i class="fas {{ showPassword ? 'fa-eye-slash' : 'fa-eye' }}"></i></button>
+                                    </div>
+                                </div>
+                                <div class="form-group text-center">
+                                    <button type="submit" class="btn btn-success">Iniciar sesión</button>
+                                </div>
+                                <div *ngIf="errorMessage" class="text-danger">{{ errorMessage }}</div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
