--- a/src/app/pages/requisiciones/index/index.component.html
+++ b/src/app/pages/requisiciones/index/index.component.html
@@ -1,1 +1,71 @@
-<p>index works!</p>
+<div class="content">
+    <div class="container-fluid">
+        <div class="card">
+            <div class="card-header text-secondary border-0">
+              <h3 class="card-title text-center">Requisiciones</h3>
+              <div class="card-tools">
+                <a href="#" class="btn btn-tool btn-sm">
+                  <i class="fas fa-download"></i>
+                </a>
+              </div>
+            </div>
+            <div class="card-header border-0">
+                <div class="row">
+                    <div class="col-xl-9 col-lg-8 col-md-8 col-sm-8">
+                        <div class="input-group my-2">
+                            <div class="input-group-prepend">
+                              <div class="input-group-text"><i class="fas fa-search"></i></div>
+                            </div>
+                            <input wire:model="search" class="form-control" placeholder="Ingrese el folio">
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-lg-4 col-md-4 col-sm-4">
+                        <a class="btn btn-success btn-block  my-2" routerLink=""><i class="fas fa-plus"></i> Solicitar insumo</a>
+                    </div>
+                </div>   
+            </div>
+            <div class="card-body table-responsive p-0">
+              <table class="table table-striped table-valign-middle">
+                <thead>
+                <tr>
+                    <th>Folio</th>
+                    <th>Artículos</th>
+                    <th>Estatus</th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            1
+                        </td>
+                        <td>
+                            1
+                        </td>
+                        <td>
+                            En espera
+                        </td>
+                        <td width="10px">
+                            <button href="#" class="btn btn-info">
+                                <i class="fas fa-eye text-white"></i>
+                            </button>
+                        </td>
+                        <td width="10px">
+                            <button href="#" class="btn btn-primary">
+                                <i class="fas fa-edit"></i>
+                            </button>
+                        </td>
+                        <td width="10px">
+                            <button href="#" class="btn btn-danger">
+                                <i class="fas fa-trash"></i>
+                            </button>
+                        </td>
+                    </tr>
+                </tbody>
+              </table>
+            </div>
+        </div>
+    </div>
+</div>
