--- a/src/app/pages/enfermeria/index/index.component.html
+++ b/src/app/pages/enfermeria/index/index.component.html
@@ -2,15 +2,17 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col">
-                <div class="info-box bg-info">
-                    <span class="info-box-icon">
-                        <img width="50px" src="assets/icons/calendario.svg" alt="">
-                    </span>
-                    <div class="info-box-content">
-                        <span class="info-box-text">Citas del día</span>
-                        <span class="info-box-number">23</span>
+                <a [routerLink]="['/enfermeria/calendario']">
+                    <div class="info-box bg-info">
+                        <span class="info-box-icon">
+                            <img width="50px" src="assets/icons/calendario.svg" alt="">
+                        </span>
+                        <div class="info-box-content">
+                            <span class="info-box-text">Citas del día</span>
+                            <span class="info-box-number">{{ citasHoy }}</span>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
         <div class="card">
@@ -24,24 +26,124 @@
             </div>
             <div class="card-body p-0">
                 <ul class="todo-list">
-                    <li *ngFor="let task of tasks" [class.done]="task.completed" class="bg-white">
-                      <input type="checkbox" [(ngModel)]="task.completed" class="checkbox">
-                      <span class="text">{{ task.titulo }}</span>
-                      <div class="tools">
-                        <button class="btn btn-sm btn-primary mr-2" (click)="openEditModal(task)"><i class="fas fa-edit"></i></button>
-                        <button class="btn btn-sm btn-danger"><i class="fas fa-trash"></i></button>
-                      </div>
-                    </li>
+                  <li *ngFor="let task of tasks" [ngClass]="{'done': task.completed}" class="bg-white">
+                    <input type="checkbox" [checked]="task.completed" (change)="toggleTaskCompletion(task)">
+                    <span class="text">{{ task.titulo }}</span>
+                    <div class="tools">
+                      <button class="btn btn-sm btn-primary mr-2" (click)="openEditModal(task)"><i class="fas fa-edit"></i></button>
+                      <button class="btn btn-sm btn-danger"><i class="fas fa-trash"></i></button>
+                    </div>
+                  </li>
                 </ul>
+            </div>              
+        </div>
+        <div class="card">
+            <div class="card-header text-secondary border-0">
+                <h3 class="card-title text-center">Mi horario de atención</h3>
+                <div class="card-tools">
+                    <a type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#horarioModal">
+                        <i class="fas fa-plus"></i> Agregar
+                    </a>
+                </div>
             </div>
+            <div class="card-body table-responsive p-0">
+                <table class="table table-striped table-valign-middle">
+                    <thead>
+                    <tr class="text-center">
+                        <th>Día</th>
+                        <th>Horario</th>
+                        <th>Descanso</th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="text-center">
+                                Lunes
+                            </td>
+                            <td class="text-center">
+                                10:00 - 17:00
+                            </td>
+                            <td class="text-center text-primary">
+                                13:00 - 14:00
+                            </td>
+                            <td width="10px">
+                                <button href="#" class="btn btn-sm btn-primary">
+                                    <i class="fas fa-edit"></i>
+                                </button>
+                            </td>
+                            <td width="10px">
+                                <button href="#" class="btn btn-sm btn-danger">
+                                    <i class="fas fa-trash"></i>
+                                </button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="text-center">
+                                Martes
+                            </td>
+                            <td class="text-center">
+                                10:00 - 17:00
+                            </td>
+                            <td class="text-center text-primary">
+                                13:00 - 14:00
+                            </td>
+                            <td width="10px">
+                                <button href="#" class="btn btn-sm btn-primary">
+                                    <i class="fas fa-edit"></i>
+                                </button>
+                            </td>
+                            <td width="10px">
+                                <button href="#" class="btn btn-sm btn-danger">
+                                    <i class="fas fa-trash"></i>
+                                </button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="text-center">
+                                Miércoles
+                            </td>
+                            <td class="text-center">
+                                10:00 - 17:00
+                            </td>
+                            <td class="text-center text-primary">
+                                13:00 - 14:00
+                            </td>
+                            <td width="10px">
+                                <button href="#" class="btn btn-sm btn-primary">
+                                    <i class="fas fa-edit"></i>
+                                </button>
+                            </td>
+                            <td width="10px">
+                                <button href="#" class="btn btn-sm btn-danger">
+                                    <i class="fas fa-trash"></i>
+                                </button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                </div>
         </div>
     </div>
 </div>
 
-<div class="modal" id="eventModal" tabindex="-1" role="dialog">
+<!-- Modal -->
+<div class="modal fade" id="horarioModal" tabindex="-1" role="dialog" aria-labelledby="horarioModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <app-pendiente-modal></app-pendiente-modal>
-      </div>
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="horarioModalLabel">Horario</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                ...
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-success">Guardar</button>
+            </div>
+        </div>
     </div>
-  </div>
+</div>
