--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -16,10 +16,11 @@ object-position: bottom;">
       <!-- Sidebar user (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image pt-1">
-          <img src="../assets/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+          <img [src]="image" class="img-circle" alt="User Image">
         </div>
         <div class="info pt-2">
-          <a href="#" class="d-block"></a>
+          <a href="#" class="d-block">{{ user?.nickname }}</a>
+          
         </div>
       </div>
 
@@ -27,7 +28,7 @@ object-position: bottom;">
       <nav class="mt-2">
         <ul class="nav nav-pills nav-sidebar nav-child-indent flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <!-- Add icons to the links using the .nav-icon class
-               with font-awesome or any other icon font library -->
+          with font-awesome or any other icon font library -->
           <li class="nav-item" *ngFor="let item of menuItems">
             <a routerLink="{{item.url}}" class="nav-link" style="cursor: pointer;">
               <img width="35px" class="pr-2" src="{{item.icono}}" alt="{{item.titulo}} icono">
