Todos los antecedentes

--- a/src/app/pages/enfermeria/index/index.component.html
+++ b/src/app/pages/enfermeria/index/index.component.html
@@ -19,29 +19,27 @@
             <div class="card-header text-secondary border-0">
                 <h3 class="card-title text-center">Lista de pendientes</h3>
                 <div class="card-tools">
-                    <a class="btn btn-success btn-sm">
-                        <i class="fas fa-plus"></i> Crear pendiente
-                    </a>
+                    <button type="button" class="btn btn-pink btn-sm" data-toggle="modal" data-target="#pendienteModal" (click)="openPendienteModal(null)"> <i class="fas fa-plus"></i> Crear pendiente</button>                                        
                 </div>
             </div>
             <div class="card-body p-0">
                 <ul class="todo-list">
                   <li *ngFor="let task of tasks" [ngClass]="{'done': task.completed}" class="bg-white">
-                    <input type="checkbox" [checked]="task.completed" (change)="toggleTaskCompletion(task)">
+                    <input type="checkbox" [(ngModel)]="task.completed" (change)="updateEstatusPendiente(task)">
                     <span class="text">{{ task.titulo }}</span>
                     <div class="tools">
-                      <button class="btn btn-sm btn-primary mr-2" (click)="openEditModal(task)"><i class="fas fa-edit"></i></button>
-                      <button class="btn btn-sm btn-danger"><i class="fas fa-trash"></i></button>
-                    </div>
+                        <button class="btn btn-sm btn-primary mr-2" data-toggle="modal" data-target="#pendienteModal" (click)="openPendienteModal(task)"><i class="fas fa-edit"></i></button>
+                        <button class="btn btn-sm btn-danger" (click)="destroyPendiente(task.id)"><i class="fas fa-trash"></i></button>
+                      </div>
                   </li>
                 </ul>
-            </div>              
+            </div>                
         </div>
         <div class="card">
             <div class="card-header text-secondary border-0">
                 <h3 class="card-title text-center">Mi horario de atención</h3>
                 <div class="card-tools">
-                    <a type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#horarioModal">
+                    <a type="button" class="btn btn-pink btn-sm" data-toggle="modal" data-target="#horarioModal">
                         <i class="fas fa-plus"></i> Agregar
                     </a>
                 </div>
@@ -122,28 +120,38 @@
                         </tr>
                     </tbody>
                 </table>
-                </div>
+            </div>
         </div>
     </div>
 </div>
 
-<!-- Modal -->
-<div class="modal fade" id="horarioModal" tabindex="-1" role="dialog" aria-labelledby="horarioModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="horarioModalLabel">Horario</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                ...
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
-                <button type="button" class="btn btn-success">Guardar</button>
-            </div>
+
+<div class="modal fade" id="pendienteModal" tabindex="-1" aria-labelledby="pendienteModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title" id="pendienteModalLabel">{{ selectedTask.id ? 'Editar Pendiente' : 'Crear Pendiente' }}</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
+        <div class="modal-body">
+            <form [formGroup]="pendienteForm">
+                <div class="form-group">
+                  <label for="titulo">Título</label>
+                  <input type="text" class="form-control" id="titulo" formControlName="titulo">
+                  <div class="text-danger">
+                    <p *ngIf="pendienteForm.get('titulo')?.errors?.['required']">El título es obligatorio.</p>
+                    <p *ngIf="pendienteForm.get('titulo')?.errors?.['minlength']">El título debe tener al menos 3 caracteres.</p>
+                    <p *ngIf="pendienteForm.get('titulo')?.errors?.['maxlength']">El título debe tener máximo 50 caracteres.</p>
+                  </div>
+                </div>
+            </form>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+            <button type="button" class="btn btn-primary" (click)="guardarPendiente()">Guardar</button>
+        </div>
+      </div>
     </div>
 </div>
