--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -16,11 +16,11 @@
                                     <label for="password">Contraseña</label>
                                     <div class="input-group mb-3">
                                         <input type="{{ showPassword ? 'text' : 'password' }}" class="form-control" id="password" name="password" [(ngModel)]="credentials.password" required>
-                                        <button class="btn btn-secondary" type="button" id="showPassword" (click)="showPassword = !showPassword"><i class="fas {{ showPassword ? 'fa-eye-slash' : 'fa-eye' }}"></i></button>
+                                        <button class="btn btn-pink" type="button" id="showPassword" (click)="showPassword = !showPassword"><i class="fas {{ showPassword ? 'fa-eye-slash' : 'fa-eye' }}"></i></button>
                                     </div>
                                 </div>
                                 <div class="form-group text-center">
-                                    <button type="submit" class="btn btn-success">Iniciar sesión</button>
+                                    <button type="submit" class="btn btn-pink">Entrar :)</button>
                                 </div>
                                 <div *ngIf="errorMessage" class="text-danger">{{ errorMessage }}</div>
                             </form>
