--- a/src/app/pages/historiales-medicos/show/show.component.html
+++ b/src/app/pages/historiales-medicos/show/show.component.html
@@ -22,8 +22,8 @@
                   </button>
                 </div>
                 <div class="collapse" id="datosGenerales">
-                  <div class="p-3">
-                    <table class="table rounded rounded-lg">
+                  <div class="p-3 table-responsive">
+                    <table class="table">
                       <tbody>
                         <tr>
                           <th scope="row">Edad</th>
