--- a/src/app/pages/historiales-medicos/edit/edit.component.html
+++ b/src/app/pages/historiales-medicos/edit/edit.component.html
@@ -1,1 +1,108 @@
-<p>edit works!</p>
+<div class="content">
+    <div class="container-fluid">
+        <div class="card">
+            <div class="card-header text-secondary border-0">
+                <h3 class="card-title text-center">Editar historial médico</h3>
+            </div>
+            <div class="card-body">
+                <!-- <form [formGroup]="form" (submit)="guardar()"> -->
+                    <div class="row">
+                        <div class="col-12 col-md-6">
+                            <div class="border rounded bg-light p-3 h-100">
+                                <div class="form-group">
+                                    <div class="custom-file">
+                                        <input type="file" class="custom-file-input" id="imagen" required>
+                                        <label class="custom-file-label">Fotografía</label>
+                                    </div>
+                                </div>
+                                <div class="pb-3">
+                                    <img src="https://this-person-does-not-exist.com/img/avatar-genf189e94d9a642cc64ebc1e46a2f6ea1d.jpg" alt="..." class="img-thumbnail mx-auto d-block">
+                                </div>
+                                <div class="form-group">
+                                    <label for="nick">Nickname</label>
+                                    <input type="text" class="form-control" id="nickname" formControlName="nickname">
+                                </div>
+                                <div class="form-group">
+                                    <label for="email">Correo electrónico</label>
+                                    <input type="text" class="form-control" id="email" formControlName="email">
+                                </div>
+                                <div class="form-group">
+                                    <label>Tipo de paciente</label>
+                                    <select class="form-control text-center" id="paciente" formControlName="paciente">
+                                      <option class="">-- Seleccione una opción --</option>
+                                      <option>Empleado</option>
+                                      <option>Dependiente</option>
+                                      <option>Externo</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <div class="border rounded bg-light p-3 h-100">
+                                <div class="form-group">
+                                    <label>Nombre (s)</label>
+                                    <input type="text" class="form-control" id="nombre" formControlName="nombre">
+                                </div>
+                                <div class="form-group">
+                                    <label>Materno</label>
+                                    <input type="text" class="form-control" id="materno" formControlName="materno">
+                                </div>
+                                <div class="form-group">
+                                    <label>Paterno</label>
+                                    <input type="text" class="form-control" id="paterno" formControlName="paterno">
+                                </div>
+                                <div class="form-group">
+                                    <label>RFC</label>
+                                    <input type="text" class="form-control" id="RFC" formControlName="RFC">
+                                </div>
+                                <div class="form-group">
+                                    <label>CURP</label>
+                                    <input type="text" class="form-control" id="CURP" formControlName="CURP">
+                                </div>
+                                <div class="form-group">
+                                    <label>IMSS</label>
+                                    <input type="text" class="form-control" id="IMSS" formControlName="IMSS">
+                                </div>
+                                <div class="form-group">
+                                    <label>Sexo</label>
+                                    <select class="form-control text-center" id="sexo" formControlName="sexo">
+                                      <option class="">-- Seleccione una opción --</option>
+                                      <option>F</option>
+                                      <option>M</option>
+                                    </select>
+                                </div>
+                                <div class="form-group">
+                                    <label>Fecha de nacimiento</label>
+                                    <input type="date" class="form-control" id="fechaNacimiento" formControlName="fechaNacimiento">
+                                </div>
+                                <div class="form-group">
+                                    <label>Estado civil</label>
+                                    <select class="form-control text-center" id="estadoCivil" formControlName="estadoCivil">
+                                      <option class="">-- Seleccione una opción --</option>
+                                      <option>Soltero</option>
+                                      <option>Casado por lo civil</option>
+                                      <option>Divorciado legalmente</option>
+                                      <option>Separado legalmente</option>
+                                      <option>Viudo de matrimonio civil</option>
+                                    </select>
+                                </div>
+                                <div class="form-group">
+                                    <label>Teléfono</label>
+                                    <div class="input-group">
+                                        <select class="custom-select" id="prefijoInternacional" style="width: 25%;" formControlName="prefijoInternacional">
+                                          <option selected>+52</option>
+                                        </select>
+                                        <input type="text" class="form-control" id="telefono" style="width: 75%;" formControlName="telefono">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="text-center pt-3">
+                            <button class="btn btn-pink">Guardar</button>
+                        </div>
+                    </div>
+                <!-- </form> -->
+            </div>
+        </div>
+    </div>
+</div>
